k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec: 
      containers:
        - name: backend
          image: blog-app-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
